q, y, g, j, and p are no longer cut off in vendor and product show pages (#593)

--- a/app/assets/stylesheets/cypress/_text.scss
+++ b/app/assets/stylesheets/cypress/_text.scss
@@ -3,6 +3,7 @@ a.label {
 }
 
 .summary-title {
+  line-height: normal;
   margin-top: 10px;
   max-width: 30em;
   white-space: nowrap;
